hard-gists/3963225/run.log
=== Docker Run Log for 3963225 ===
Started at: Mi 29. Okt 14:06:54 CET 2025

[2025-10-29 14:06:55] START: Running container for 3963225
[2025-10-29 14:06:55] SUCCESS: Container a3f919822ed5e05fc3b7dd29f71bb88000b4a9f26183645ca828ed646d265dc7 started for 3963225
=== Container logs for 3963225 ===
  File "/snippet.py", line 33
    print output_path
    ^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3963225 ===
[2025-10-29 14:06:57] INFO: Container a3f919822ed5e05fc3b7dd29f71bb88000b4a9f26183645ca828ed646d265dc7 has stopped
